karnc/tests/fixtures/positive/122_http_get_simple/src/greet.karn
context greet

service api from http {
  on GET("/ping") () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
