karnc/tests/fixtures/negative/120_service_mixed_protocols/src/api.karn
context api

service mixed from http {
  on call(name: String) -> Effect[Result[String, ()]] {
    Ok("called")
  }

  on GET("/hello") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("hello world")
  }
}
